trybuild_tests/tests/trybuild/fail/filter_contains_wrong_args.stderr
error: expected one argument to 'contains'
  --> tests/trybuild/fail/filter_contains_wrong_args.rs:12:28
   |
12 |     let _f = filter!(Post, tags.contains("a", "b"));
   |                            ^^^^

error[E0277]: the trait bound `Vec<String>: ToSql` is not satisfied
 --> tests/trybuild/fail/filter_contains_wrong_args.rs:3:1
  |
3 | #[model]
  | ^^^^^^^^ the trait `ToSql` is not implemented for `Vec<String>`
  |
  = help: the trait `ToSql` is implemented for `Vec<u8>`
  = note: required for `SqlVal` to implement `From<Vec<String>>`
  = note: required for `Vec<String>` to implement `Into<SqlVal>`
note: required by a bound in `FieldExpr`
 --> $WORKSPACE/butane_core/src/query/fieldexpr.rs
  |
  | pub struct FieldExpr<T>
  |            --------- required by a bound in this struct
  | where
  |     T: Into<SqlVal>,
  |        ^^^^^^^^^^^^ required by this bound in `FieldExpr`
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Vec<String>: FieldType` is not satisfied
 --> tests/trybuild/fail/filter_contains_wrong_args.rs:7:11
  |
7 |     tags: Vec<String>,
  |           ^^^^^^^^^^^ the trait `FieldType` is not implemented for `Vec<String>`
  |
  = help: the trait `FieldType` is implemented for `Vec<u8>`

error[E0277]: the trait bound `Vec<String>: FromSql` is not satisfied
 --> tests/trybuild/fail/filter_contains_wrong_args.rs:3:1
  |
3 | #[model]
  | ^^^^^^^^ the trait `FromSql` is not implemented for `Vec<String>`
  |
  = help: the trait `FromSql` is implemented for `Vec<u8>`
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Vec<String>: ToSql` is not satisfied
 --> tests/trybuild/fail/filter_contains_wrong_args.rs:3:1
  |
3 | #[model]
  | ^^^^^^^^ the trait `ToSql` is not implemented for `Vec<String>`
  |
  = help: the trait `ToSql` is implemented for `Vec<u8>`
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the function or associated item `new` exists for struct `FieldExpr<Vec<String>>`, but its trait bounds were not satisfied
 --> tests/trybuild/fail/filter_contains_wrong_args.rs:3:1
  |
3 | #[model]
  | ^^^^^^^^ function or associated item cannot be called on `FieldExpr<Vec<String>>` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `Vec<String>: ToSql`
          which is required by `Vec<String>: Into<SqlVal>`
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)
